# PolymorphEngineInterface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Game/Assets/: R-TypeClient.pcf.engine
Game/Assets/.Entities/: Text-b780a35eb7.pcf.entity
Game/Assets/Scenes/: Sample scene.pcf.scene
Game/Factory/include/: ObjectFactory.hpp  ScriptFactory.hpp
Game/Factory/include/initializers/: TestInitializer.hpp
Game/Factory/src/: ObjectFactory.cpp  ScriptFactory.cpp
Game/Factory/src/initializers/: TestInitalizer.cpp
Game/Scripts/include/: TestComponent.hpp
Game/Scripts/src/: TestComponent.cpp
Plugins/: FindPlugins.cmake
